k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notes
  labels:
    # Kubernetes refuse tout pod qui ne respecte pas le profil "restricted"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
