k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app
  namespace: notes
spec:
  selector:
    app: notes-app
  ports:
    - port: 80
      targetPort: 5000
